# zero_minor_problem

./: README.md  a.out  generate_primes.cpp
APM_2.0_graphs_and_data/: APM_2.0_Summary.xlsx
APM_experiment_trial/: SUMMARY.txt  apm_hits_one  apm_research_4(1).cu  apm_research_4.cu  apm_research_5.cu  apm_research_hits_one.cu
APM_for_server/: Makefile  README.md  apm3d  apm_research_3(7).cu  apm_research_3.cu  apm_research_5_new.cu  apm_research_6.cu  apm_research_hits_one_check_till_100.cu
Analysis_Scripts/: README.md  analyze_results.py
aditya@10.20.50.24/: apm_brahma_2.cu
changed_to_flat_array/: Makefile  apm_brahma.cu
figuring_out/: matrix_op  matrix_try  matrix_try.cpp  operaions_ntl.cpp  time_to_compute.cpp
matrix_minors_and_op_25x25/: matrix_minors.cpp
optimized_flatarray/: Makefile  apm_brahma.cu
optimized_further/: Makefile  apm_brahma.cu  check_results.py  merge_summaries.py  sort_kernel_files.py  submit_parallel.sh
plotting_graphs_for_each_deviations/: minor_combinations.xlsx  plot_graphs.py  table_formatted.xlsx
prime_num/: .generate_mat.cpp.kate-swp  generate_mat.cpp  output  prime_matrix_solution_199_4x4.txt
profiling_results/: baseline_before.txt  filesystem.txt  ptxas_log.txt  sys_trace.nsys-rep
random_and_rule_matrix/: exmp.cpp  (+1 more)
refactored/: CMakeLists.txt  README.md
refactored/include/core/: Matrix.hpp
refactored/include/services/: MinorService.hpp
refactored/include/utils/: IO.hpp
refactored/src/: main.cpp
refactored/src/core/: Matrix.cpp
refactored/src/services/: MinorService.cpp
refactored/src/utils/: IO.cpp
(+15005 files in other folders)
